implementation/testdata/typechecker/error/classes/portfolio_test9.java
//Type error. Extending an undefined class is not allowed.

int main(){
    return 0;
        }


class A extends B{

}